
Note: Changes marked [BULL] only take effect when the optional BUG DLL is installed.
      BULL features that don't require BUG are not listed here.


____________________________________________________________________________________________________
BUG x.x unreleased

CHANGES

New Features:

Improvements:

Bug Fixes:

MODDING

New Features:

Improvements:

Bug Fixes:


____________________________________________________________________________________________________
BUG 4.3 released February 16th, 2010

CHANGES

New Features:

- Main Interface
	Can choose from three sizes for the build/action buttons
	Added a button to bring up the BUG Options Screen (top left)
- Espionage Advisor
	New layout shows EPs spent against you and icons for passive missions
	Can swap cities and missions lists to see cost in each city for a single mission
	New GLANCE-style tab shows EPs spending on and by each rival you've met
- Technology Chooser
	Added color-coded shadow denoting each technology's era
- BUFFY
	Barbarian Uprising events require Priesthood

Improvements:

- Main Interface
	Unit Plot drawing improvements (pre-work only at the moment)
- Great Person Bar
	Added city's total GP/Turn to hover.
- City Screen
	Can select which tiles to count in Raw Yields when Civ starts
- Foreign Advisor
	Can select how to display attitudes: numbers, smilies, or both
	Shows technologies that you cannot trade to rivals
- Technology Chooser
	Added hover to GP Research icons showing the preferred order
- Unit Naming
	Unnamed initial units are named when you found your capital
	Units from tribal villages (goody huts) are named
	Random names can now be mixed with other naming codes or static text
- Reminders
	Saved for all players in multiplayer games [BULL]

Bug Fixes:

- Strategy Layer
	Fixed random crash on Windows Vista/7
- City Screen
	Happiness and unhappiness are shown for foreign cities
	Whip/Draft Anger is shown for teammates' cities